$Header$
===============================================================

135	Luke Howard <lukeh@padl.com>

	* merged ldap.conf
	* fixed bug in concatenating relative search
	  bases in ldap-nss.c (profile support)

134	Luke Howard <lukeh@padl.com>

	* fixed Makefile.am
	* reordered DB search order in util.c

133	Luke Howard <lukeh@padl.com>

	* make /usr/lib directory in Makefile.am
	* new spec file from Joe Little

132	Luke Howard <lukeh@padl.com>

	* fixed rebind preprocessor logic

131	Luke Howard <lukeh@padl.com>

	* created files for automake happiness

130	Luke Howard <lukeh@padl.com>

	* fixed typo preventing build with Netscape
	  client library

129	Luke Howard <lukeh@padl.com>

	* updated version number
	* fixed build bug on Solaris

128	Luke Howard <lukeh@padl.com>

	* fixed logic bug in util.c introduced in
	  nss_ldap-127

127	Luke Howard <lukeh@padl.com>

	* updating copyright notices
	* autoconf support; IRIX and OSF/1 support has
	  been dropped (dl-*.[ch]) as no one really
	  used this, the implementation was a hack,
	  and these operating systems have their
	  own LDAP implementations now
	* added support for "referrals" and "restart"
	  options to ldap.conf
	* use OpenLDAP 2.x rebind proc with correct
	  arguments
	* added "timelimit" and "bind_timelimit"
	  directives to ldap.conf
	* fixed bug with dereferencing aliases
	* preliminary support for profiles; recognise
	  profile semantics in ldap-nss.c/util.c
	* parity with pam_ldap; "ssl" directive in
	  ldap.conf can now specify "yes" or
	  "start_tls" for Start TLS
	* hopefully fixed Berkeley DB include 
	  mess in util.c
	* fixed potential buffer overflow in util.c
	* default to LDAP protocol version 3
	* fixed leaks in util.c, dnsconfig.c
	* accept on/yes/true for boolean configuration
	  values
	* tested building on FreeBSD, Solaris 8, Linux
	* tested functionality on RedHat 6.2

126	Luke Howard <lukeh@padl.com>

125	Luke Howard <lukeh@padl.com>
