@@ -25,7 +25,7 @@
 
 /* $Id$ */
 
-#ifdef __AIX__
+#ifdef _AIX
 void *nw_pvtinit (void);
 #endif
 IRS_EXPORT void nw_close (struct irs_nw *);
@@ -140,7 +140,7 @@ IRS_EXPORT void
 nw_close (struct irs_nw *this)
 {
   LOOKUP_ENDENT (this);
-#ifdef __AIX__
+#ifdef _AIX
   free (this->private);
   free (this);
 #endif
@@ -179,7 +179,7 @@ nw_minimize (struct irs_nw *this)
 {
 }
 
-#ifdef __AIX__
+#ifdef _AIX
 void *
 nw_pvtinit (void)
 #else
